[gd_scene load_steps=10 format=3 uid="uid://bk4yfgv43r14o"]

[ext_resource type="Script" path="res://player/scripts/Player.gd" id="1_hg26a"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="2_aidnx"]
[ext_resource type="Script" path="res://scripts/VariablesMonitor.gd" id="3_5yohs"]
[ext_resource type="PackedScene" uid="uid://bdoqphvadbbhr" path="res://player/scenes/PlayerCamera.tscn" id="4_f3sjb"]
[ext_resource type="PackedScene" uid="uid://bjp1c6kxtny3f" path="res://player/scenes/PlayerStateMachine.tscn" id="5_0s0vn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mcgkw"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_w8e1s"]
height = 2.2
radius = 0.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tvljp"]

[sub_resource type="QuadMesh" id="QuadMesh_qqq8x"]
orientation = 1

[node name="Character" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_hg26a")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_mcgkw")

[node name="Interact area" type="Area3D" parent="."]

[node name="Area collider" type="CollisionShape3D" parent="Interact area"]
shape = SubResource("CylinderShape3D_w8e1s")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_tvljp")

[node name="TempDirectionMesh" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2.1, 0, 0.5, -1)
mesh = SubResource("QuadMesh_qqq8x")
skeleton = NodePath("../..")

[node name="StateChartDebugger" parent="." instance=ExtResource("2_aidnx")]
offset_left = 709.0
offset_bottom = -383.0
initial_node_to_watch = NodePath("../StateMachine")

[node name="VariablesMonitor" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
text = "sample text"
script = ExtResource("3_5yohs")

[node name="Camera" parent="." instance=ExtResource("4_f3sjb")]
unique_name_in_owner = true

[node name="StateMachine" parent="." instance=ExtResource("5_0s0vn")]
unique_name_in_owner = true

[node name="ToRunning" parent="StateMachine/Root/MovementState/Walking" index="0"]
delay_seconds = 0.2

[node name="InteractState" parent="StateMachine/Root" index="1"]
initial_state = NodePath("NotInteracting")

[node name="AtackingState" parent="StateMachine/Root" index="2"]
initial_state = NodePath("Not Atacking")

[connection signal="body_entered" from="Interact area" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="Interact area" to="." method="_on_interact_area_body_exited"]
[connection signal="state_entered" from="StateMachine/Root/MovementState/Idle" to="." method="_on_stop_moving"]
[connection signal="state_exited" from="StateMachine/Root/MovementState/Idle" to="." method="_on_start_moving"]
[connection signal="state_processing" from="StateMachine/Root/MovementState/Idle" to="." method="_while_idle"]
[connection signal="state_processing" from="StateMachine/Root/MovementState/Walking" to="." method="_while_walking"]
[connection signal="state_entered" from="StateMachine/Root/MovementState/Running" to="." method="_on_start_running"]
[connection signal="state_exited" from="StateMachine/Root/MovementState/Running" to="." method="_on_stop_running"]
[connection signal="state_processing" from="StateMachine/Root/MovementState/Running" to="." method="_while_running"]
[connection signal="state_exited" from="StateMachine/Root/InteractState/PickingUpAnItem" to="." method="_on_picking_up_an_item_state_exited"]

[editable path="StateMachine"]
